# rodrigo_ribeiro_embarcatech_HBr_2025

./: .gitignore  README.md
projetos/adc_joystick/: CMakeLists.txt  Readme.md  adc_joystick.uf2  main.c
projetos/countdown_project/: CMakeLists.txt  Readme.md  countdown_project.uf2  main.c
projetos/embedded_led/: CMakeLists.txt
projetos/embedded_led/app/: main.c
projetos/embedded_led/drivers/: led_embutido.c
projetos/embedded_led/hal/: hal_led.c
projetos/embedded_led/include/: hal_led.h  led_embutido.h
projetos/galton_board/: CMakeLists.txt  Readme.md  main.c
projetos/galton_board/inc/: ssd1306_font.h
projetos/hello_word/: CMakeLists.txt
projetos/hello_word/serial/: CMakeLists.txt  hello_serial.c
projetos/hello_word/usb/: CMakeLists.txt  hello_usb.c  usb.uf2
projetos/pico_temperature/: main.c
projetos/pico_temperature/src/: adc.c  adc.h
projetos/pico_temperature/teste/: test_adc.c
projetos/sensor_temp_internal/: CMakeLists.txt  Readme.md  main.c  sensor_temp_internal.uf2
projetos/sensor_temp_internal/inc/: ssd1306_i2c.c
projetos/wifi_led/: CMakeLists.txt  pico_w_wifi_example.c  pico_w_wifi_example.uf2
